# megano_shop

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
megano/: requirements.txt
megano/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
megano/accounts/fixtures/: accounts_data.json  users_data.json
megano/accounts/migrations/: 0001_initial.py
megano/cart/: cart.py  serializers.py  urls.py  views.py
megano/catalog/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
megano/catalog/fixtures/: catalog_data.json
megano/catalog/migrations/: 0001_initial.py  0002_rename_name_category_title_alter_categoryimage_src.py  0003_alter_categoryimage_src.py  0004_alter_categoryimage_src.py  0005_categoryimage_alt.py
megano/megano/: settings.py  urls.py
megano/megano/fixtures/: users_data.json
megano/orders/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
megano/orders/fixtures/: orders_data.json
megano/orders/migrations/: 0001_initial.py  0002_alter_order_paymenttype_id_alter_order_status_id.py  0002_orderdeliverytype_orderpaymenttype_orderstatus_and_more.py  0003_alter_order_paymenttype_id_alter_order_status_id.py  0003_rename_deliverytype_order_deliverytype_id_and_more.py  0004_alter_order_status_id.py
megano/products/: admin.py  models.py  serializers.py  urls.py  views.py
megano/products/fixtures/: products_data.json
megano/products/migrations/: 0001_initial.py  0002_tovar.py  0004_rename_sales_sale.py  (+4 more)
nginx/: nginx.conf
(+8 files in other folders)
